Merge main to sni 8882 (#219)
* Results validator changes (#137)

Co-authored-by: Sahil Arora <sahilarora@Scrumconnect-Sahil-A.local>

* updating poms for 17.104.162 branch with snapshot versions

* updating poms for 17.104.163-SNAPSHOT development

* updating poms for branch'dev/release-17.104.162' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* SNI-8637 Update linked application status when case ejected SNI-7954 Hearing deleted fix (#150)

* SNI-7954 Fix

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* SNI-8637 Update linked application status when case ejected

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* SNI-8637 Update linked application status when case ejected
SNI-7954 Hearing deleted fix

* Fix for SNI-7954

* SNI-8637 Update linked application status when case ejected
SNI-7954 Hearing deleted fix

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>
Co-authored-by: shrikanth.shetty1 <shrikanth.shetty1@hmcts.net>

* updating poms for 17.104.164-SNAPSHOT development

* CCT-2353 merge to main 2613 release (#151)

* CCT-2353 merge to main 2613 release

* Updating unit tests to improve code coverage

---------

Co-authored-by: Sahil Arora <sahilarora@Scrumconnect-Sahil-A.local>

* updating poms for 17.104.164 branch with snapshot versions

* updating poms for 17.104.165-SNAPSHOT development

* updating poms for branch'dev/release-17.104.164' with non-snapshot versions

* updating develop poms to master versions to avoid merge conflicts

* Updating develop poms back to pre merge state

* 2613 release fix build (#152)

* updating poms for 17.104.166-SNAPSHOT development

* updating poms for 17.104.166 branch with snapshot versions

* updating poms for 17.104.167-SNAPSHOT development

* updating poms for branch'dev/release-17.104.166' with non-snapshot versions

* updating develop poms to master versions to avoid merge con